[package]
name = "solana-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.9.13"
spl-token = { version = "3.1", features = [ "no-entrypoint" ] }
borsh = "0.9.0"
spl-associated-token-account = "1.0.1"

[dev-dependencies]
solana-program-test = "1.9.9"
solana-sdk = "1.9.9"