[package]
name = "solata_test"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.9.13"
spl-token = { version = "3.1", features = [ "no-entrypoint" ] }
borsh = "0.9.0"
spl-associated-token-account = "1.0.1"

[dev-dependencies]
solana-program-test = "1.9.13"
solana-sdk = "1.9.13"

[lib]
crate-type = ["cdylib", "lib"]